--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "ismail-store",
+  "name": "ismail-store-v2",
   "version": "1.0.0",
-  "description": "Premium E-commerce Store",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
